@@ -1,7 +1,9 @@
 2.9.3
 =====
-Sep 7, 2017
+Sep 8, 2017
 - Allow attributes in scoped data bindings to be overridden with blanks.
+- Add DSL for eager capture by javascript
+  - I capture <attribute> by javascript "<expression>"
 
 2.9.2
 =====
